+ add Pool.h * Cambie como pone el nombre en el output the las librerias ahora automaticamente genera el nombre usando el $(configuration) en vez de _debug o _release * Agrege en vez de usar el pragma comment(lib, namelib) ahora se usa desde el linker con el namelib_$(configuration)

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ ipch/
 /rahSDK.VC.VC.opendb
 /rahSDK.VC.db
 /rahTools/ReadMe.txt
+/rahMath_Test/rahMath_Test.vcxproj.user
+/rahTools_Test/rahTools_Test.vcxproj.user
