--- a/rahTools/rahTools.vcxproj.filters
+++ b/rahTools/rahTools.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClInclude Include="rahTools.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Pool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rahMacros.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Pool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
