--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ ipch/
 /rahTools/ReadMe.txt
 /rahMath_Test/rahMath_Test.vcxproj.user
 /rahTools_Test/rahTools_Test.vcxproj.user
+rahSDK.VC.opendb
+rahTools/rahTools.vcxproj.user
+rahSDK.sdf
