--- a/rahTools/rahTools.vcxproj.filters
+++ b/rahTools/rahTools.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Pool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Module.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rahMacros.cpp">
