--- a/rahMath/rahMath.vcxproj
+++ b/rahMath/rahMath.vcxproj
@@ -21,16 +21,28 @@
   <ItemGroup>
     <ClInclude Include="Color.h" />
     <ClInclude Include="Degrees.h" />
+    <ClInclude Include="Matrix3D.h" />
+    <ClInclude Include="Matrix4D.h" />
+    <ClInclude Include="OBB.h" />
+    <ClInclude Include="Plane.h" />
     <ClInclude Include="PlatformMath.h" />
     <ClInclude Include="Radians.h" />
     <ClInclude Include="rahMath.h" />
+    <ClInclude Include="Ray.h" />
+    <ClInclude Include="Sphere.h" />
     <ClInclude Include="Vector3D.h" />
     <ClInclude Include="Vector4D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="Degrees.cpp" />
+    <ClCompile Include="Matrix3D.cpp" />
+    <ClCompile Include="Matrix4D.cpp" />
+    <ClCompile Include="OBB.cpp" />
+    <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Radians.cpp" />
+    <ClCompile Include="Ray.cpp" />
+    <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="Vector3D.cpp" />
     <ClCompile Include="Vector4D.cpp" />
   </ItemGroup>
