--- a/rahGraphics/rahGraphics.vcxproj.filters
+++ b/rahGraphics/rahGraphics.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="StaticModel.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="rahGraphics.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GraphicSwapChain.cpp">
