--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ lib/rahGraphics/x64/Debug/rahGraphics_Debug.lib
 lib/rahMath/Win32/Debug/rahMath_Debug.lib
 bin/
 rahGRaphics_Test/resources/
+rahGRaphics_Test/shaders.fx
