--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ lib/rahMath/Win32/Debug/rahMath_Debug.lib
 bin/
 rahGRaphics_Test/resources/
 rahGRaphics_Test/shaders.fx
+lib/rahTools/Win32/Release/rahTools_Release.lib
+rahTools_Test/Log/Jul 12 2018.txt
+rahTools_Test/test2.txt
+rahTools_Test/Log/test.txt
+rahGRaphics_Test/resources.rar
