*changes for visual leak detector

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ rahTools_Test/Log/Jul 12 2018.txt
 rahTools_Test/test2.txt
 rahTools_Test/Log/test.txt
 rahGRaphics_Test/resources.rar
+lib/rahMath/Win32/Release/rahMath_Release.lib
